--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,14 @@
         "vector": "cpp",
         "iosfwd": "cpp",
         "__split_buffer": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "array": "cpp",
+        "istream": "cpp",
+        "locale": "cpp",
+        "memory": "cpp",
+        "tuple": "cpp",
+        "variant": "cpp",
+        "__hash_table": "cpp",
+        "unordered_map": "cpp"
     }
 }
